test: TennisGame mock test